Fix header alignment shifted by 58233413e8a
Feels a bit hacky because we're fighting the `margin: auto` property
that caused a shift right in response to increasing the `min-width:
80em`-> `80.5em` property with `padding: 1em` -> `0.75em` (half of the
change in `min-width` because `margin: auto` centers).

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -70,7 +70,7 @@ div.results-classic-thead-background {
 }
 
 div.results-classic-header {
-  padding: 1.5em 1em;
+  padding: 1.5em 0.75em;
   margin: 0 auto;
   width: 80em;
 
